# cpme

./: CLAUDE.md  CONTRIBUTION.md  exp_design.md  plan.md  pyproject.toml
dlci/: core.py  datasets.py  dr_kpt.py  environment.py  kernels.py  kpt.py  longitudinal_datasets.py  longitudinal_environment.py  nested_dr_kpt.py  policies.py  runtime_tables.py  viz.py
notebooks/: experiments.ipynb  longitudinal_experiments.ipynb
results/: ns100_longitudinal_scenarioIII_NestedDR-CF.csv  ns100_longitudinal_scenarioII_NestedDR-CF.csv  ns100_longitudinal_scenarioIV_NestedDR-CF.csv  ns150_longitudinal_scenarioIV_NestedDR-CF.csv  ns200_longitudinal_scenarioIV_NestedDR-CF.csv  ns250_longitudinal_scenarioII_NestedDR-CF.csv  ns250_longitudinal_scenarioIV_NestedDR-CF.csv  ns250_longitudinal_scenarioI_NestedDR-CF.csv  ns300_longitudinal_scenarioII_NestedDR-CF.csv  ns300_longitudinal_scenarioIV_NestedDR-CF.csv  ns300_longitudinal_scenarioI_NestedDR-CF.csv  ns350_longitudinal_scenarioI_NestedDR-CF.csv  ns400_longitudinal_scenarioIV_NestedDR-CF.csv  ns500_longitudinal_scenarioI_NestedDR-CF.csv
scripts/: run_tables.py
src/: core.py  datasets.py  dr_kpt.py  dsprites_environment.py  dsprites_experiments.ipynb  environment.py  experiments.ipynb  kernels.py  kpt.py  longitudinal_datasets.py  longitudinal_environment.py  longitudinal_experiments.ipynb  nested_dr_kpt.py  policies.py  runtime_tables.py
src/results/: ns100_longitudinal_scenarioI_NestedDR-CF.csv  ns150_longitudinal_scenarioIII_NestedDR-CF.csv  ns150_longitudinal_scenarioII_NestedDR-CF.csv  (+13 more)
(+20 files in other folders)
